# nexus-magi

./: .cspell.json  .prettierignore  README.md  dprint.json  mise.toml  package-lock.json  package.json  pyproject.toml
.clinerules/: 00-base.md  01-memory-bank.md  10-git.md  20-coding.md  99-zunda.md
.github/: copilot-instructions.md
.github/workflows/: cicd.yml  frontend-check.yml  spell-check.yml
.mise/tasks/: clean.sh  format.sh  lint.sh  setup.sh  update.sh
api/: .gitignore  main.tsp  mise.toml  package.json  pyproject.toml  requirements.txt  tspconfig.json
api/.mise/tasks/: format.sh  lint.sh  setup.sh
api/scripts/: __init__.py  generate_models.py
backend/: mise.toml  pyproject.toml  requirements.txt  setup.py
backend/.mise/tasks/: clean.sh  format.sh  lint.sh  setup.sh  update.sh
backend/nexus_magi/: __init__.py  __main__.py  app.py  base_chat_model.py  chat_model.py  debate_chat_model.py  simple_chat_model.py
backend/nexus_magi/api_gen/: __init__.py  models.py
backend/scripts/: generate_models.py
frontend/: .eslintrc.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
frontend/.mise/tasks/: clean.sh  format.sh  lint.sh  setup.sh  update.sh
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.js  index.tsx
frontend/src/components/: ChatInterface.js  ChatInterface.tsx  MagiSystemResponse.js  MagiSystemResponse.tsx  MessageBubble.js  MessageBubble.tsx  TabPanel.tsx
frontend/src/components/debate/: DebateChatInterface.tsx
frontend/src/components/simple/: SimpleChatInterface.tsx
frontend/src/generated-api/: index.ts
frontend/src/generated-api/core/: OpenAPI.ts
frontend/src/generated-api/models/: ChatMessage.ts  ChatRequest.ts  WebSocketResponse.ts
frontend/src/generated-api/services/: XWebsocketService.ts
frontend/src/services/: apiService.js  apiService.ts  websocketClient.ts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/nexus_magi/: __init__.py  __main__.py  app.py  chat_model.py
