[project]
authors = [{ name = "iimuz", email = "iz.primary.story+github@gmail.com" }]
description = "LLM Agent application."
name = "nexus_magi"
requires-python = ">=3.11"
urls = { repository = "https://github.com/iimuz/nexus-magi" }
version = "1.0.0"

dependencies = [
  "langgraph>=0.0.20",
  "textual>=0.52.1",
  "litellm>=1.33.1",
  "requests>=2.31.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.22.0",
  "websockets>=11.0.3",
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
]

[project.scripts]
nexus-magi = "nexus_magi.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
]
test = ["pytest"]

[build-system]
requires = ["setuptools>=68", "wheel"]

[tool.ruff]
# same as black
indent-width = 4
line-length = 88

extend-exclude = [
  ".vscode",
  "data",
  "nexus_magi/api_gen/", # 自動生成されるファイルを除外
]

[tool.ruff.lint]
# Allow lint for all enabled rules
ignore = [
  "D203", # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D213", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
  # The following rules may cause conflicts when used with the formatter: `COM812`, `ISC001`.
  "COM812",
  "ISC001",
  # `ノ` は日本語でコメントしているので無視する
  "RUF003",
]
select = ["ALL"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
indent-style = "space" # Like Black, indent with spaces, rather than tabs.
line-ending = "auto" # Like Black, automatically detect the appropriate line ending.
quote-style = "double" # Like Black, use double quotes for strings.
skip-magic-trailing-comma = false # Like Black, respect magic trailing commas.
